--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -29,19 +29,19 @@
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>6.1.8</version>
+		<version>6.1.9-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_installer</artifactId>
 	<name>pubman_installer</name>
 	<packaging>jar</packaging>
-	<version>6.1.8</version>
+	<version>6.1.9-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.8/pubman_installer</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.8/pubman_installer</developerConnection>
-		<url>https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.8</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer</developerConnection>
+		<url>https://zim02.gwdg.de/repos/pubman/</url>
 	</scm>
 
 	<build>
@@ -201,7 +201,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_ear</artifactId>
-			<version>6.1.8</version>
+			<version>6.1.9-SNAPSHOT</version>
 			<scope>provided</scope>
 			<type>ear</type>
 		</dependency>
