--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -5,3 +5,9 @@ escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 
 # eSciDoc-ObjId of the root of the OU tree (used for edoc import)
 escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
+
+# Transformation stylesheets
+escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
+escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
+escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
