--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -357,6 +357,10 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+		          <minmemory>128m</minmemory>
+		          <maxmemory>1g</maxmemory>
+		        </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
