--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -234,6 +234,12 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
+# Transformation stylesheets
+escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet}
+escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
+escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
+
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
 
 escidoc.syndication.maximum.records=${escidoc.syndication.maximum.records}
